notes/ringress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plumber-on-k8s-ingress
spec:
  rules:
  - http:
      paths:
      - path: /health
        backend:
          serviceName: plumber-on-k8s-service
          servicePort: 8000
      - path: /parity
        backend:
          serviceName: plumber-on-k8s-service
          servicePort: 8000
      - path: /wait
        backend:
          serviceName: plumber-on-k8s-service
          servicePort: 8000
      - path: /fail
        backend:
          serviceName: plumber-on-k8s-service
          servicePort: 8000
      - path: /quit
        backend:
          serviceName: plumber-on-k8s-service
          servicePort: 8000
